[tool.poetry]
name = "to-do list"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
crud = "^0.1"
python-multipart = "^0.0.19"
aiomysql = "^0.2.0"
aiosqlite = "^0.20.0"
sqlmodel = "^0.0.22"
asyncio = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
